Fix alignment of token name text

--- a/css/fast-token-browser.css
+++ b/css/fast-token-browser.css
@@ -121,6 +121,7 @@
 .tree-grid button {
   background: transparent;
   border: 0;
+  box-sizing: border-box;
   display: inline;
   float: left;
   height: 2em;
